--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                         <a href="#page-top"></a>
                     </li>
                     <li class="page-scroll">
-                        <a href="#realisation">Réalisation</a>
+                        <a href="#realisation">Réalisations</a>
                     </li>
                     <li class="page-scroll">
                         <a href="#cv">Curriculum Vitae</a>
@@ -95,13 +95,13 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2>Réalisation</h2>
+                    <h2>Réalisations</h2>
                     <hr class="star-primary">
                 </div>
             </div>
             <div class="row">
                 <!--<div class="col-sm-4 portfolio-item">-->
-                    <h1>Réalisation faite durant mes années de BTS</h1>
+                    <h1>Réalisations faites durant mes années de BTS</h1>
 					<ul>
 						<li><a href="realiser/">PPE3: Mise en place d'un réseau WIFI</a></li>
 						<li><a href="realiser/">PPE4: Mise en place D'un DHCP sous Linux</a></li>
