--- a/realiser/Gestion_Incidents.html
+++ b/realiser/Gestion_Incidents.html
@@ -94,7 +94,7 @@
                                 Chaque ce retrouve avec sa propre liste de demandes d'anomalie.
                             </p>
                             <div id="picture">  
-                                <img src="/assistance/anomalie.PNG" style="width: 50%; margin-left: 25%" />
+                                <img src="assistance/anomalie.PNG" style="width: 50%; margin-left: 25%" />
                             </div>
                             <p>
                                Chaque Lundi on se regroupe dans un scrum afin de faire un compte rendu de la semaine passé des tâches résolu et de définir les tâches  à résoudre en priorité cette semaine et son mis sur Redmine.  
