--- a/realiser/Gestion_Assistance.html
+++ b/realiser/Gestion_Assistance.html
@@ -78,11 +78,11 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="intro-text">
-                    <span class="name">Gestion d'assistance d'un utilisateur</span>
+                        <span class="name">Gestion d'assistance d'un utilisateur</span>
                         <hr class="star-light">
                         <span class="skills">
                         	<div id="picture">	
-								<img src="../img/siteMXM/accueil.PNG" style="width: 50%; margin-left: 25%" />
+								<img src="../img/siteMXM/accueil.png" style="width: 50%; margin-left: 25%" />
 							</div>
                             <br/>
 							<h4>Contexte</h4>
@@ -94,10 +94,11 @@
                             <p>
                                 
                             </p>
-                        </span>    
+                        </span>
                     </div>
                 </div>
             </div>
         </div>
     </header>
+
 </html>
