--- a/realiser/Gestion_Incidents.html
+++ b/realiser/Gestion_Incidents.html
@@ -78,7 +78,7 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="intro-text">
-                    <span class="name">Gestion d'incident</span>
+                        <span class="name">Gestion d'incident</span>
                         <hr class="star-light">
                         <span class="skills">
 
@@ -94,22 +94,23 @@
                                 Chaque ce retrouve avec sa propre liste de demandes d'anomalie.
                             </p>
                             <div id="picture">  
-                                <img src="assistance/anomalie.PNG" style="width: 50%; margin-left: 25%" />
+                                <img src="assistance/anomalie.png" style="width: 50%; margin-left: 25%" />
                             </div>
                             <p>
                                Chaque Lundi on se regroupe dans un scrum afin de faire un compte rendu de la semaine passé des tâches résolu et de définir les tâches  à résoudre en priorité cette semaine et son mis sur Redmine.  
                             </p>
                             <div id="picture" style="width: 100%">  
-                                <img src="assistance/scrum.PNG" style="width: 40%; float: left;" />
-                                <img src="assistance/scrum2.PNG" style="width: 50%; float: right" />
+                                <img src="assistance/scrum.png" style="width: 40%; float: left;" />
+                                <img src="assistance/scrum2.png" style="width: 50%; float: right" />
                             </div>
                             <p>
                                 toto
                             </p>
-                        </span>    
+                        </span>
                     </div>
                 </div>
             </div>
         </div>
     </header>
+
 </html>
