--- a/realiser/Veille_Informatique.html
+++ b/realiser/Veille_Informatique.html
@@ -78,7 +78,7 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="intro-text">
-                    <span class="name">Veille informatique</span>
+                        <span class="name">Veille informatique</span>
                         <hr class="star-light">
                         <span class="skills">
                             <br/>
@@ -92,18 +92,19 @@
                                 Pour réaliser cette veille j'ai utiliser le service "google alerte" qui me renvoi par mail les informations sur la sécurité de VMWare tout les jours.
                             </p>
                             <div id="picture">  
-                                <img src="veille/alerte_google.PNG" style="width: 50%; margin-left: 25%" />
+                                <img src="veille/alerte_google.png" style="width: 50%; margin-left: 25%" />
                             </div>
                             <p>
                                 Afin d'un bon tri j'ai ainsi réaliser sur la boite mail un filtrage qui me regroupe les mails d'alerte dans le dossier approprié. 
                             </p>
                             <div id="picture">  
-                                <img src="veille/filtre.PNG" style="width: 50%; margin-left: 25%" />
+                                <img src="veille/filtre.png" style="width: 50%; margin-left: 25%" />
                             </div>
-                        </span>    
+                        </span>
                     </div>
                 </div>
             </div>
         </div>
     </header>
+
 </html>
