--- a/realiser/siteMXM.html
+++ b/realiser/siteMXM.html
@@ -78,11 +78,11 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="intro-text">
-                    <span class="name">Site Intranet de MXM</span>
+                        <span class="name">Site Intranet de MXM</span>
                         <hr class="star-light">
                         <span class="skills">
                         	<div id="picture">	
-								<img src="../img/siteMXM/accueil.PNG" style="width: 50%; margin-left: 25%" />
+								<img src="../img/siteMXM/accueil.png" style="width: 50%; margin-left: 25%" />
 							</div>
                             <br/>
 							<h4>Contexte</h4>
@@ -95,17 +95,18 @@
                                 Pour des raisons de sécurité je ne peux pas vous montrer le contenu des pages réalisées pour éviter des fuites d'informations.
                                 <br/><br/>
                                 Pour la réalisation de ce site j'ai dû intégrer un LDAP ( Lightweight Directory Access Protocol ) ce qui permet de se connecter à leurs sessions grâce aux identifiants déjà existants et de gérer les droits d'accès.
-                                <img src="../img/siteMXM/login.PNG" style="width: 50%; margin-left: 25%">
+                                <img src="../img/siteMXM/login.png" style="width: 50%; margin-left: 25%">
                                 <br/>
                                 j'ai dû utiliser plusieurs modules disponibles pour convenir à tous les besoins et demandes de la société. Voici certains modules utilisés:
-                                <img src="../img/siteMXM/module.PNG" style="width: 50%; margin-left: 25%">
+                                <img src="../img/siteMXM/module.png" style="width: 50%; margin-left: 25%">
                                 <br/>
                                 Dans ce site l'entreprise pourra retrouver l'annuaire interne, une liste de procédures, le réglement intérieur, une page "wiki" permettant aux utilisateurs de partager et d'argumenter à propos d'un sujet ainsi qu'une page "Admin" réservée aux administrateurs du site servant à regrouper toute information sur le réseau ( moyen d'accès, commande de configuration ....). 
                             </p>
-                        </span>    
+                        </span>
                     </div>
                 </div>
             </div>
         </div>
     </header>
+
 </html>
