--- a/realiser/Gestion_Assistance.html
+++ b/realiser/Gestion_Assistance.html
@@ -82,7 +82,7 @@
                         <hr class="star-light">
                         <span class="skills">
                         	<div id="picture">	
-								<img src="siteMXM/accueil.PNG" style="width: 50%; margin-left: 25%" />
+								<img src="siteMXM/accueil.png" style="width: 50%; margin-left: 25%" />
 							</div>
                             <br/>
 							<h4>Contexte</h4>
