--- a/realiser/Redactions_Techniques.html
+++ b/realiser/Redactions_Techniques.html
@@ -82,7 +82,7 @@
                         <hr class="star-light">
                         <span class="skills">
                         	<div id="picture">	
-								<img src="siteMXM/accueil.PNG" style="width: 50%; margin-left: 25%" />
+								<img src="siteMXM/accueil.png" style="width: 50%; margin-left: 25%" />
 							</div>
                             <br/>
 							<h4>Contexte</h4>
@@ -95,7 +95,7 @@
                                 Pour des raisons de sécurité je ne peux pas vous montrer le contenu des pages réalisées pour éviter des fuites d'informations.
                                 <br/><br/>
                                 Pour la réalisation de ce site j'ai dû intégrer un LDAP ( Lightweight Directory Access Protocol ) ce qui permet de se connecter à leurs sessions grâce aux identifiants déjà existants et de gérer les droits d'accès.
-                                <img src="siteMXM/login.PNG" style="width: 50%; margin-left: 25%">
+                                <img src="siteMXM/login.png" style="width: 50%; margin-left: 25%">
                                 <br/>
                                 j'ai dû utiliser plusieurs modules disponibles pour convenir à tous les besoins et demandes de la société. Voici certains modules utilisés:
                                 <img src="siteMXM/module.PNG" style="width: 50%; margin-left: 25%">
