--- a/realiser/Gestion_Incidents.html
+++ b/realiser/Gestion_Incidents.html
@@ -85,27 +85,28 @@
                             <br/>
 							<h4>Contexte</h4>
 							<p>
-								Sous la demande de la société MXM, j'ai dû venir en aide aux utilisateurs du système informatique. Afin d'un avertissement efficace, un système de gestion de Ticket (Redmine) avait été installer précecdement.
+								Sous la demande de la société MXM, j'ai dû venir en aide aux utilisateurs du système informatique. Afin d'obtenir un avertissement efficace, un système de gestion de Ticket (Redmine) a été installé précédemment.
 							</p>
                             <br/>
                             <h4>La Réalisation d'une demande</h4>
                             <p>
-                                Pour chaque incidents un ticket doit être créer sur gestionnaire de Redmine, avec l'attribution de l'équipe informatique ou à un technicien particulier.
-                                Chaque ce retrouve avec sa propre liste de demandes d'anomalie.
+                                Pour chaque incident, un ticket doit être créé sur le gestionnaire de Redmine, avec l'attribution de l'équipe informatique ou à un technicien particulier.
+                                Chaque personne se retrouve avec sa propre liste de demandes d'anomalies.
                             </p>
                             <div id="picture">  
                                 <img src="assistance/anomalie.png" style="width: 50%; margin-left: 25%" />
                             </div>
                             <p>
-                               Chaque Lundi on se regroupe dans un scrum afin de faire un compte rendu de la semaine passé des tâches résolu et de définir les tâches  à résoudre en priorité cette semaine et son mis sur Redmine.  
+                               Chaque lundi, on se regroupe lors d'un scrum afin de faire un compte rendu de la semaine passée, des tâches résolues et ensuite, de définir les tâches à résoudre en priorité pour cette semaine, 
+                               que l'on ajoute sur Redmine.  
                             </p>
-                            <div id="picture" style="width: 100%">  
-                                <img src="assistance/scrum.png" style="width: 40%; float: left;" />
-                                <img src="assistance/scrum2.png" style="width: 50%; float: right" />
+                            <div id="picture" style="width: 100%; height:400px;">
+                                <img src="assistance/scrum.png" width="300" height="350" style="float:left;" />
+                                    <img src="assistance/scrum2.png" width="600" height="350" style="float:right;"/>
                             </div>
-                            <p>
-                                toto
-                            </p>
+                            <div>
+                                <p>toto</p>
+                            </div>
                         </span>
                     </div>
                 </div>
