--- a/realiser/Veille_Informatique.html
+++ b/realiser/Veille_Informatique.html
@@ -92,13 +92,13 @@
                                 Pour réaliser cette veille j'ai utiliser le service "google alerte" qui me renvoi par mail les informations sur la sécurité de VMWare tout les jours.
                             </p>
                             <div id="picture">  
-                                <img src="veille/alerte_google.png" style="width: 50%; margin-left: 25%" />
+                                <img src="siteMXM/veille/alerte_google.png" style="width: 50%; margin-left: 25%" />
                             </div>
                             <p>
                                 Afin d'un bon tri j'ai ainsi réaliser sur la boite mail un filtrage qui me regroupe les mails d'alerte dans le dossier approprié. 
                             </p>
                             <div id="picture">  
-                                <img src="veille/filtre.png" style="width: 50%; margin-left: 25%" />
+                                <img src="siteMXM/veille/filtre.png" style="width: 50%; margin-left: 25%" />
                             </div>
                         </span>
                     </div>
