--- a/realiser/Evolution_Systeme.html
+++ b/realiser/Evolution_Systeme.html
@@ -81,27 +81,20 @@
                         <span class="name">Evolution du système</span>
                         <hr class="star-light">
                         <span class="skills">
-                        	<div id="picture">	
+                        	<div id="picture">
 								<img src="siteMXM/accueil.png" style="width: 50%; margin-left: 25%" />
 							</div>
                             <br/>
 							<h4>Contexte</h4>
 							<p>
-								Sous la demande de la société MXM, j'ai dû réaliser un nouveau site intranet en me basant sur celui qui existait déjà. Ce nouveau site a été réalisé avec un CMS ( Content Management System) appelé Drupal sous la demande du client.
+								Sous la demande de la société MXM, j'ai dû réaliser des mises à jours système des serveurs.
 							</p>
                             <br/>
-                            <h4>La Réalisation du site</h4>
+                            <h4>La Réalisation</h4>
                             <p>
-                                Pour des raisons de sécurité je ne peux pas vous montrer le contenu des pages réalisées pour éviter des fuites d'informations.
+                                Pour ce faire j'ai dû faire des copies des serveurs virtuel afin de faire des tests pour afin de vérifier le bon fonctionnement des services des serveurs avant la phase d'intégration dans le système.
                                 <br/><br/>
-                                Pour la réalisation de ce site j'ai dû intégrer un LDAP ( Lightweight Directory Access Protocol ) ce qui permet de se connecter à leurs sessions grâce aux identifiants déjà existants et de gérer les droits d'accès.
-
-                                <img src="siteMXM/login.png" style="width: 50%; margin-left: 25%">
-                                <br/>
-                                j'ai dû utiliser plusieurs modules disponibles pour convenir à tous les besoins et demandes de la société. Voici certains modules utilisés:
-                                <img src="siteMXM/module.PNG" style="width: 50%; margin-left: 25%">
-                                <br/>
-                                Dans ce site l'entreprise pourra retrouver l'annuaire interne, une liste de procédures, le réglement intérieur, une page "wiki" permettant aux utilisateurs de partager et d'argumenter à propos d'un sujet ainsi qu'une page "Admin" réservée aux administrateurs du site servant à regrouper toute information sur le réseau ( moyen d'accès, commande de configuration ....). 
+                                A l'aide du logiciel Veam, j'ai fais la copie du serveur vers un esxi 5.5 qui nous sert à faire nos tests et afin déviter de refaire des copies du serveur en cas d'erreur irémédiate des snapshot on était prise. 
                             </p>
                         </span>
                     </div>
