--- a/realiser/Gestion_Incidents.html
+++ b/realiser/Gestion_Incidents.html
@@ -97,15 +97,14 @@
                                 <img src="siteMXM/assistance/anomalie.png" style="width: 50%; margin-left: 25%" />
                             </div>
                             <p>
-                               Chaque lundi, on se regroupe lors d'un scrum afin de faire un compte rendu de la semaine passée, des tâches résolues et ensuite, de définir les tâches à résoudre en priorité pour cette semaine, 
-                               que l'on ajoute sur Redmine.  
+                               Chaque lundi, l'équipe se regroupe lors d'un scrum afin de faire un compte rendu de la semaine passée, des tâches résolues et ensuite, de définir les tâches à résoudre en priorité pour cette semaine, qui sont ajouté sur Redmine.  
                             </p>
                             <div id="picture" style="width: 100%; height:400px;">
                                 <img src="siteMXM/assistance/scrum.png" width="300" height="350" style="float:left;" />
                                 <img src="siteMXM/assistance/scrum2.png" width="600" height="350" style="float:right;"/>
                             </div>
                             <div>
-                                <p>dznfdnzfznfuzfzuzhfuzhzufzhtoto</p>
+                                <p></p>
                             </div>
                         </span>
                     </div>
