--- a/realiser/Virtualisation.html
+++ b/realiser/Virtualisation.html
@@ -87,12 +87,12 @@
                             <br/>
 							<h4>Contexte</h4>
 							<p>
-								Sous la demande de la société MXM, j'ai dû réaliser un nouveau site intranet en me basant sur celui qui existait déjà. Ce nouveau site a été réalisé avec un CMS ( Content Management System) appelé Drupal sous la demande du client.
+								Sous la demande de la société MXM, je me suis impliqué sur le fonctionnement des serveurs ESXI, les moyens utiliser pour la sauvegarde et la restauration des machines virtuels.
 							</p>
                             <br/>
-                            <h4>La Réalisation du site</h4>
+                            <h4>La Réalisation</h4>
                             <p>
-                                Pour des raisons de sécurité je ne peux pas vous montrer le contenu des pages réalisées pour éviter des fuites d'informations.
+                                Pour ce fais j'ai fais beucoup de recherche sur les ce sujets et réaliser des documentations techniques sur les point plus techniques.
                                 <br/><br/>
                                 Pour la réalisation de ce site j'ai dû intégrer un LDAP ( Lightweight Directory Access Protocol ) ce qui permet de se connecter à leurs sessions grâce aux identifiants déjà existants et de gérer les droits d'accès.
                                 <img src="siteMXM/login.png" style="width: 50%; margin-left: 25%">
