--- a/index.html
+++ b/index.html
@@ -101,8 +101,8 @@
             <div class="row">
                 <h2 style="text-align:center;">Réalisations faites durant mes années de BTS</h2>
                 <div class="collection">
-                    <a class="collection-item" href="realiser/">PPE3: Mise en place d'un réseau WIFI</a>
-                    <a class="collection-item" href="realiser/">PPE4: Mise en place D'un DHCP sous Linux</a>
+                    <a class="collection-item" href="realiser/ppe3/Borne_Wi-Fi.pdf" target="_blank">PPE3: Mise en place d'un réseau WIFI</a>
+                    <a class="collection-item" href="realiser/ppe4/DHCP_Linux.pdf" target="_blank">PPE4: Mise en place D'un DHCP sous Linux</a>
                     <a class="collection-item" href="realiser/Gestion_Incidents.html">Mission support utilisateurs / Gestion d'incidents</a>
                     <a class="collection-item" href="realiser/Gestion_Assistance.html">Mission support utilisateurs / Demande d'assistance</a>
                     <a class="collection-item" href="realiser/siteMXM.html">Site intranet MXM</a>
