--- a/realiser/Redactions_Techniques.html
+++ b/realiser/Redactions_Techniques.html
@@ -87,14 +87,20 @@
                             <br/>
 							<h4>Contexte</h4>
 							<p>
-								Sous la demande de la société MXM, et afin d'enréchire les connaissances de l'entreprise.
+								Sous la demande de la société MXM, et afin d'enréchire les connaissances de l'entreprise, écrire des documentations techniques.
 							</p>
                             <br/>
                             <h4>La Réalisation du site</h4>
                             <p>
-                                Afin de réaliser c'est documentation techniques j'ai dû tout d'abord me familliariser avec le logiciel Latex.
-                                <br/><br/> 
-                                
+                                Afin de réaliser c'est documentation techniques j'ai dû tout d'abord me familliariser avec le logiciel Latex, qui permet de convertir l'écriture faite avec le language du logiciel en pdf.
+                                <br/><br/>
+                                Exemple de documentation faites avec Latex :
+                                <br/>
+                                <a target="_blank" href="procedures/Restore_PROC_0001A.pdf" style="color: white">- Procédure de restauration</a>
+                                <br/>
+                                <a target="_blank" href="procedures/PC_PROC_0001A.pdf" style="color: white">- Procédure Basique des logiciels d'un poste</a>
+                                <br/>
+                                <a target="_blank" href="procedures/MAIL_PROC_0001A.pdf" style="color: white">- Procédure de configuration de Thunderbird et du module Lightning</a>
                             </p>
                         </span>
                     </div>
