--- a/realiser/Gestion_Incidents.html
+++ b/realiser/Gestion_Incidents.html
@@ -104,7 +104,7 @@
                                 <img src="siteMXM/assistance/scrum2.png" width="600" height="350" style="float:right;"/>
                             </div>
                             <div>
-                                <p></p>
+                                <p>Tout le long de la tâche, une maintein de l'avancement dois être fais sur le ticket de la demande d'incident, jusqu'à la fermeture du ticket.</p>
                             </div>
                         </span>
                     </div>
@@ -112,5 +112,4 @@
             </div>
         </div>
     </header>
-
 </html>
