--- a/realiser/Evolution_Systeme.html
+++ b/realiser/Evolution_Systeme.html
@@ -81,9 +81,6 @@
                         <span class="name">Evolution du système</span>
                         <hr class="star-light">
                         <span class="skills">
-                        	<div id="picture">
-								<img src="siteMXM/accueil.png" style="width: 50%; margin-left: 25%" />
-							</div>
                             <br/>
 							<h4>Contexte</h4>
 							<p>
@@ -94,7 +91,13 @@
                             <p>
                                 Pour ce faire j'ai dû faire des copies des serveurs virtuel afin de faire des tests pour afin de vérifier le bon fonctionnement des services des serveurs avant la phase d'intégration dans le système.
                                 <br/><br/>
-                                A l'aide du logiciel Veam, j'ai fais la copie du serveur vers un esxi 5.5 qui nous sert à faire nos tests et afin déviter de refaire des copies du serveur en cas d'erreur irémédiate des snapshot on était prise. 
+                                A l'aide du logiciel Veeam, j'ai fais la copie du serveur vers un esxi 5.5 qui nous sert à faire nos tests et afin déviter de refaire des copies du serveur en cas d'erreur irémédiate des snapshot on était prise.
+                                <br/>
+                                Une fois sur le serveur de test j'ai en plus réalisé des snapshot après chaque étapes passer avec succès, pour pouvoir revenir à l'étape précédante. Chaque étapes réalisé sont noté pour pouvoir garder la procédure faites pour l'amélioration du service. 
+                            </p>
+                            <h4>La conclusion</h4>
+                            <p>
+                                Une fois que toutes les étapes ont été réaliser avec succès et correctement retranscris, toutes les étapes sont réalisé sur le serveur principal pendant un planning établi pour ne pas infecté les utilisations des utilisateurs des services par nos actions. 
                             </p>
                         </span>
                     </div>
