--- a/realiser/Virtualisation.html
+++ b/realiser/Virtualisation.html
@@ -81,9 +81,6 @@
                         <span class="name">Virtualisation sur VMWare</span>
                         <hr class="star-light">
                         <span class="skills">
-                        	<div id="picture">	
-								<img src="siteMXM/accueil.png" style="width: 50%; margin-left: 25%" />
-							</div>
                             <br/>
 							<h4>Contexte</h4>
 							<p>
@@ -94,13 +91,16 @@
                             <p>
                                 Pour ce fais j'ai fais beucoup de recherche sur les ce sujets et réaliser des documentations techniques sur les point plus techniques.
                                 <br/><br/>
-                                Pour la réalisation de ce site j'ai dû intégrer un LDAP ( Lightweight Directory Access Protocol ) ce qui permet de se connecter à leurs sessions grâce aux identifiants déjà existants et de gérer les droits d'accès.
-                                <img src="siteMXM/login.png" style="width: 50%; margin-left: 25%">
-                                <br/>
-                                j'ai dû utiliser plusieurs modules disponibles pour convenir à tous les besoins et demandes de la société. Voici certains modules utilisés:
-                                <img src="siteMXM/module.PNG" style="width: 50%; margin-left: 25%">
-                                <br/>
-                                Dans ce site l'entreprise pourra retrouver l'annuaire interne, une liste de procédures, le réglement intérieur, une page "wiki" permettant aux utilisateurs de partager et d'argumenter à propos d'un sujet ainsi qu'une page "Admin" réservée aux administrateurs du site servant à regrouper toute information sur le réseau ( moyen d'accès, commande de configuration ....). 
+                                La société possède 5 serveurs physiques sous un système VMWare ESXI 5.5, pocèdant chacun une moyenne de 6 machines virtuels (serveurs et des machines de tests), les serveurs ESXI on plusieurs stades de sauvegardes.
+
+                                Sauvegardes Complète:
+
+                                Les 5 serveurs sous ESXI sont enregistrer sur le logiciel VEEAM, permettant une sauvegarde complete des serveurs avec toutes les machines virtuels. Cette sauvegarde ce fait sur nos NAS.
+
+                                Sauvegardes indépendante:
+
+                                Chaque machines virtuels on leur propre sauvgarde sur le serveur ESXI grâce au programme ghetto.vbc. Cette sauvegarde ce fait directement sur le serveur esxi.
+                                
                             </p>
                         </span>
                     </div>
