--- a/realiser/Ecran_Affichage.html
+++ b/realiser/Ecran_Affichage.html
@@ -78,32 +78,33 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="intro-text">
-                    <span class="name">Création d'écran d'affichage</span>
+                        <span class="name">Création d'écran d'affichage</span>
                         <hr class="star-light">
                         <span class="skills">
                             <br/>
 							<h4>Contexte</h4>
 							<p>
-								Sous la demande de la filiale AXONIC, j'ai dû intégrer un écran dans le hall d'entré afin d'afficher des informations sur les phases de tests, ou plus si besoins, d'utiliser des systèmes simple pour que des utilisateurs puisse faire des modifications sur les page à afficher.
+								Sous la demande de la filiale AXONIC, j'ai dû intégrer un écran dans le hall d'entrée, afin d'afficher des informations sur les phases de tests, ou plus si besoin, d'utiliser des systèmes simples pour que des utilisateurs puissent faire des modifications sur les pages à afficher.
 							</p>
                             <br/>
                             <h4>La Réalisation</h4>
                             <p>
-                                Utilisation d'un poste sous un système Linux Ubuntu. J'ai configurer un boot automatique à l'heure d'ouverture du bâtiment, ainsi d'un configuration du cron afin d'automatiser l'arrêt du poste à la fermeture.
+                                Utilisation d'un poste sous un système Linux Ubuntu. J'ai configuré un boot automatique à l'heure d'ouverture du bâtiment, ainsi qu'une configuration du cron, afin d'automatiser l'arrêt du poste à la fermeture.
                                 <br/>
-                                Dans le cron j'ai aussi automatisé le lancement de l'outil Chrome en pleine écran au lancement du poste, chaque information à affiché son enregistrer comme onglet à ouvrir au lancement de l'outil, les onglets vont passé entre elle grâce à l'utilisation du pluggin "Rotisserie" qui permettra de designé le temps d'affichage de chaque onglet et recupère l'url de chaque onglet ouvert.
+                                Dans le cron, j'ai aussi automatisé le lancement de l'outil Chrome en plein écran au lancement du poste. Chaque information à afficher, sont enregistrées comme onglet à ouvrir au lancement de l'outil, les onglets vont passer entre eux grâce à l'utilisation du plugin "Rotisserie", qui permettra de désigner le temps d'affichage de chaque onglet et de récupérer l'url de chaque onglet ouvert.
                                 <br/>
-                                La plus part des page à afficher sont des pages html que j'ai créé avec un script ou faut renseigné la période d'affichage, et que en dehors de cette periode l'onglet est fermé automatiquement et donc pas affiché à l'écran.
+                                La plupart des pages à afficher sont en html, que j'ai créées avec un script où il faut renseigner la période d'affichage, et en dehors de cette période l'onglet est fermé automatiquement et donc n'est pas affiché à l'écran.
                             </p>
                             <br/>
                             <h4>Les utilisateurs</h4>
                             <p>
-                                Chaques utilisateurs succeptible de modifié des pages ont était formés par un technicien ainsique sur chaque page créer des explications simples ont était mise en commentaire sur le code html. 
+                                <strong style="color:red;">Tous les utilisateurs susceptibles de modifier des pages, ont été formés par un technicien ainsi que sur chaque page, créer des explications simples ont était mise en commentaire sur le code html.</strong>
                             </p>
-                        </span>    
+                        </span>
                     </div>
                 </div>
             </div>
         </div>
     </header>
+
 </html>
