--- a/realiser/Evolution_Systeme.html
+++ b/realiser/Evolution_Systeme.html
@@ -89,15 +89,15 @@
                             <br/>
                             <h4>La Réalisation</h4>
                             <p>
-                                Pour ce faire j'ai dû faire des copies des serveurs virtuel afin de faire des tests pour afin de vérifier le bon fonctionnement des services des serveurs avant la phase d'intégration dans le système.
+                                Pour ce faire, j'ai dû cloner des serveurs virtuels afin de réaliser des tests pour vérifier le bon fonctionnement des services des serveurs, avant la phase d'intégration dans le système.
                                 <br/><br/>
-                                A l'aide du logiciel Veeam, j'ai fais la copie du serveur vers un esxi 5.5 qui nous sert à faire nos tests et afin déviter de refaire des copies du serveur en cas d'erreur irémédiate des snapshot on était prise.
+                                A l'aide du logiciel Veeam, j'ai copié le serveur vers un esxi 5.5 qui nous sert à faire nos propres tests et dans le but d'éviter de refaire des copies du serveur en cas d'erreur irémédiate des <i>snapshots</i> ont été prises.
                                 <br/>
-                                Une fois sur le serveur de test j'ai en plus réalisé des snapshot après chaque étapes passer avec succès, pour pouvoir revenir à l'étape précédante. Chaque étapes réalisé sont noté pour pouvoir garder la procédure faites pour l'amélioration du service. 
+                                <strong style="color:red;">Une fois sur le serveur de test j'ai en plus réalisé des snapshots après chaque étape passée avec succès, pour pouvoir revenir à l'étape précédante. Chaque étape réalisée est notée pour pouvoir garder la procédure faite pour l'amélioration du service.</strong>
                             </p>
                             <h4>La conclusion</h4>
                             <p>
-                                Une fois que toutes les étapes ont été réaliser avec succès et correctement retranscris, toutes les étapes sont réalisé sur le serveur principal pendant un planning établi pour ne pas infecté les utilisations des utilisateurs des services par nos actions. 
+                                Une fois que toutes les étapes ont été réalisées avec succès et correctement retranscrites, toutes les étapes sont réalisées sur le serveur principal à l'aide d'un planning établi, pour ne pas affecter les services des utilisateurs. 
                             </p>
                         </span>
                     </div>
