--- a/realiser/Gestion_Assistance.html
+++ b/realiser/Gestion_Assistance.html
@@ -1,4 +1,4 @@
- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="fr">
 
 <head>
@@ -84,7 +84,7 @@
                             <br/>
 							<h4>Contexte</h4>
 							<p>
-								Sous la demande de la société MXM, j'ai dû faire m'occuper 
+								Sous la demande de la société MXM, j'ai dû m'occuper 
 							</p>
                             <br/>
                             <h4>La Réalisation d'une demande</h4>
