--- a/realiser/Gestion_Incidents.html
+++ b/realiser/Gestion_Incidents.html
@@ -85,7 +85,7 @@
                             <br/>
 							<h4>Contexte</h4>
 							<p>
-								Sous la demande de la société MXM, j'ai dû venir en aide aux utilisateurs du système informatique. Afin d'obtenir un avertissement efficace, un système de gestion de Ticket (Redmine) a été installé précédemment.
+								Sous la demande de la société MXM, j'ai dû venir en aide aux utilisateurs du système informatique. Afin d'obtenir un avertissement efficace, un système de gestion de Tickets (Redmine) a été installé précédemment.
 							</p>
                             <br/>
                             <h4>La Réalisation d'une demande</h4>
@@ -104,7 +104,7 @@
                                 <img src="siteMXM/assistance/scrum2.png" width="600" height="350" style="float:right;"/>
                             </div>
                             <div>
-                                <p>Tout le long de la tâche, une maintein de l'avancement dois être fais sur le ticket de la demande d'incident, jusqu'à la fermeture du ticket.</p>
+                                <p>Tout le long de la tâche, une maintien de l'avancement doit être fait sur le ticket de la demande d'incident, jusqu'à sa fermeture.</p>
                             </div>
                         </span>
                     </div>
@@ -112,4 +112,5 @@
             </div>
         </div>
     </header>
+
 </html>
