--- a/realiser/Redactions_Techniques.html
+++ b/realiser/Redactions_Techniques.html
@@ -84,12 +84,12 @@
                             <br/>
 							<h4>Contexte</h4>
 							<p>
-								Sous la demande de la société MXM, et afin d'enréchire les connaissances de l'entreprise, écrire des documentations techniques.
+								Sous la demande de la société MXM, et afin d'enrichir les connaissances de l'entreprise, écrire des documentations techniques.
 							</p>
                             <br/>
                             <h4>La Réalisation du site</h4>
                             <p>
-                                Afin de réaliser c'est documentation techniques j'ai dû tout d'abord me familliariser avec le logiciel Latex, qui permet de convertir l'écriture faite avec le language du logiciel en pdf.
+                                Afin de réaliser ces documentations techniques, j'ai dû tout d'abord me familliariser avec le logiciel Latex, qui permet de convertir l'écriture faite avec le language du logiciel en pdf.
                                 <br/><br/>
                                 Exemple de documentation faites avec Latex :
                                 <br/>
