--- a/realiser/Veille_Informatique.html
+++ b/realiser/Veille_Informatique.html
@@ -84,18 +84,18 @@
                             <br/>
 							<h4>Contexte</h4>
 							<p>
-								Sous ma propre volonté, j'ai réaliser une veille sur les sécurités des systèmes VMWare afin d'avoir un système de virtualisation sécuriser au seins de la société vu que la plus part de nos serveur son virtualisé.
+								Sous ma propre volonté, j'ai réalisé une veille sur les sécurités des systèmes VMWare afin d'avoir un système de virtualisation sécurisé au sein de la société car la plupart de nos serveurs sont virtualisés.
 							</p>
                             <br/>
                             <h4>La Réalisation de la veille</h4>
                             <p>
-                                Pour réaliser cette veille j'ai utiliser le service "google alerte" qui me renvoi par mail les informations sur la sécurité de VMWare tout les jours.
+                                Pour réaliser cette veille, j'ai utilisé le service "google alerte" qui me renvoie par mail les informations sur la sécurité de VMWare tous les jours.
                             </p>
                             <div id="picture">  
                                 <img src="siteMXM/veille/alerte_google.png" style="width: 50%; margin-left: 25%" />
                             </div>
                             <p>
-                                Afin d'un bon tri j'ai ainsi réaliser sur la boite mail un filtrage qui me regroupe les mails d'alerte dans le dossier approprié. 
+                                Afin d'avoir un bon tri, j'ai ainsi réalisé sur la boite mail un filtrage qui me regroupe les mails d'alerte dans le dossier approprié. 
                             </p>
                             <div id="picture">  
                                 <img src="siteMXM/veille/filtre.png" style="width: 50%; margin-left: 25%" />
