--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                 </div>
             </div>
             <div class="row">
-                <h2>Formation</h2>
+                <h2>Formations</h2>
                 <table style="width: 50%">
                     <tbody>
                         <tr>
