--- a/realiser/Virtualisation.html
+++ b/realiser/Virtualisation.html
@@ -84,22 +84,22 @@
                             <br/>
 							<h4>Contexte</h4>
 							<p>
-								Sous la demande de la société MXM, je me suis impliqué sur le fonctionnement des serveurs ESXI, les moyens utiliser pour la sauvegarde et la restauration des machines virtuels.
+								Sous la demande de la société MXM, je me suis impliqué sur le fonctionnement des serveurs ESXI, les moyens utilisés pour la sauvegarde et la restauration des machines virtuelles.
 							</p>
                             <br/>
                             <h4>La Réalisation</h4>
                             <p>
-                                Pour ce fais j'ai fais beucoup de recherche sur les ce sujets et réaliser des documentations techniques sur les point plus techniques.
+                                Pour ceci, j'ai fait beaucoup de recherches sur ce sujet et réalisé des documentations techniques sur les points plus techniques.
                                 <br/><br/>
-                                La société possède 5 serveurs physiques sous un système VMWare ESXI 5.5, pocèdant chacun une moyenne de 6 machines virtuels (serveurs et des machines de tests), les serveurs ESXI on plusieurs stades de sauvegardes.
+                                La société possède 5 serveurs physiques sous un système VMWare ESXI 5.5, possédant chacun une moyenne de 6 machines virtuelles (serveurs et des machines de tests), les serveurs ESXI ont plusieurs stades de sauvegardes.
 
-                                Sauvegardes Complète:
+                                Sauvegardes Complètes:
 
-                                Les 5 serveurs sous ESXI sont enregistrer sur le logiciel VEEAM, permettant une sauvegarde complete des serveurs avec toutes les machines virtuels. Cette sauvegarde ce fait sur nos NAS.
+                                Les 5 serveurs sous ESXI sont enregistrés sur le logiciel VEEAM, permettant une sauvegarde complète des serveurs avec toutes les machines virtuelles. Cette sauvegarde se fait sur nos NAS.
 
-                                Sauvegardes indépendante:
+                                Sauvegardes indépendantes:
 
-                                Chaque machines virtuels on leur propre sauvgarde sur le serveur ESXI grâce au programme ghetto.vbc. Cette sauvegarde ce fait directement sur le serveur esxi.
+                                Chaque machine virtuelle possède sa propre sauvegarde sur le serveur ESXI, grâce au programme ghetto.vbc. Cette sauvegarde se fait directement sur le serveur esxi.
                                 
                             </p>
                         </span>
