--- a/realiser/siteMXM.html
+++ b/realiser/siteMXM.html
@@ -87,14 +87,14 @@
                             <br/>
 							<h4>Contexte</h4>
 							<p>
-								Sous la demande de la société MXM, j'ai dû réaliser un nouveau site intranet en me basant sur celui qui existait déjà. Ce nouveau site a été réalisé avec un CMS ( Content Management System) appelé Drupal sous la demande du client.
+								Sous la demande de la société MXM, j'ai dû réaliser un nouveau site intranet en me basant sur celui qui existait déjà. Ce nouveau site a été réalisé avec un CMS ( Content Management System ou Système de gestion de contenu ) appelé Drupal sous la demande du client.
 							</p>
                             <br/>
                             <h4>La Réalisation du site</h4>
                             <p>
-                                Pour des raisons de sécurité je ne peux pas vous montrer le contenu des pages réalisées pour éviter des fuites d'informations.
+                                Pour des raisons de sécurité, je ne peux pas vous montrer le contenu des pages réalisées pour éviter des fuites d'informations.
                                 <br/><br/>
-                                Pour la réalisation de ce site j'ai dû intégrer un LDAP ( Lightweight Directory Access Protocol ) ce qui permet de se connecter à leurs sessions grâce aux identifiants déjà existants et de gérer les droits d'accès.
+                                Pour la réalisation de ce site j'ai dû intégrer un LDAP ( Lightweight Directory Access Protocol ) ce qui permet de se connecter aux sessions utilisateurs grâce aux identifiants déjà existants et de gérer les droits d'accès.
                                 <br/>
                                 <img src="siteMXM/login.png" style="width: 50%; margin-left: 25%">
                                 <br/>
@@ -102,7 +102,7 @@
                                 <br/>
                                 <img src="siteMXM/module.PNG" style="width: 50%; margin-left: 25%">
                                 <br/>
-                                Dans ce site l'entreprise pourra retrouver l'annuaire interne, une liste de procédures, le réglement intérieur, une page "wiki" permettant aux utilisateurs de partager et d'argumenter à propos d'un sujet ainsi qu'une page "Admin" réservée aux administrateurs du site servant à regrouper toute information sur le réseau ( moyen d'accès, commande de configuration ....). 
+                                Dans ce site, l'entreprise pourra retrouver l'annuaire interne, une liste de procédures, le réglement intérieur, une page "wiki" permettant aux utilisateurs de partager et d'argumenter à propos d'un sujet ainsi qu'une page "Admin" réservée aux administrateurs du site servant à regrouper toute information sur le réseau ( moyen d'accès, commande de configuration ....). 
                             </p>
                         </span>
                     </div>
