--- a/realiser/Ecran_Affichage.html
+++ b/realiser/Ecran_Affichage.html
@@ -98,7 +98,7 @@
                             <br/>
                             <h4>Les utilisateurs</h4>
                             <p>
-                                <strong style="color:red;">Tous les utilisateurs susceptibles de modifier des pages, ont été formés par un technicien ainsi que sur chaque page, créer des explications simples ont était mise en commentaire sur le code html.</strong>
+                                <strong style="color:red;">Tous les utilisateurs susceptibles de réalisé des modification sur les pages, ont été formés par un technicien, sur chaque modèle de page qui peut être affiché, puis pour facilité les modification, des explications simples ont était mis en commentaires sur le code html.</strong>
                             </p>
                         </span>
                     </div>
