--- a/realiser/Ecran_Affichage.html
+++ b/realiser/Ecran_Affichage.html
@@ -98,7 +98,7 @@
                             <br/>
                             <h4>Les utilisateurs</h4>
                             <p>
-                                <strong style="color:red;">Tous les utilisateurs susceptibles de réalisé des modification sur les pages, ont été formés par un technicien, sur chaque modèle de page qui peut être affiché, puis pour facilité les modification, des explications simples ont était mis en commentaires sur le code html.</strong>
+                                Tous les utilisateurs susceptibles de réaliser des modifications sur les pages, ont été formés par un technicien sur chaque modèle de pages qui peut être affiché, puis pour faciliter les modifications, des explications simples ont été mises en commentaires sur le code html.
                             </p>
                         </span>
                     </div>
