--- a/realiser/Evolution_Systeme.html
+++ b/realiser/Evolution_Systeme.html
@@ -93,7 +93,7 @@
                                 <br/><br/>
                                 A l'aide du logiciel Veeam, j'ai copié le serveur vers un esxi 5.5 qui nous sert à faire nos propres tests et dans le but d'éviter de refaire des copies du serveur en cas d'erreur irémédiate des <i>snapshots</i> ont été prises.
                                 <br/>
-                                <strong style="color:red;">Une fois sur le serveur de test, j'ai réalisé des snapshots de la VM après chacune des étapes passée avec succès, pour pouvoir revenir à l'étape précédante. Chaque étapes réalisées sont notées pour pouvoir constitué une procédure à l'amélioration du service.</strong>
+                                <strong style="color:red;">Une fois sur le serveur de test, j'ai réalisé des snapshots de la VM pour chaque étape passée avec succès, pour pouvoir revenir à l'étape précédante. Chaque étape réalisée est notée pour pouvoir constituer une procédure à l'amélioration du service.</strong>
                             </p>
                             <h4>La conclusion</h4>
                             <p>
