--- a/index.html
+++ b/index.html
@@ -98,8 +98,8 @@
                     <hr class="star-primary">
                 </div>
             </div>
-            <div>
-                <a href="tableau_synthèse.pdf" target="_blank" style="text-align:center;">Tableau de synthèse</a>
+            <div style="text-align:center;"">
+                <a href="tableau_synthèse.pdf" target="_blank">Tableau de synthèse</a>
             </div>
             <div class="row">
                 <h2 style="text-align:center;">Réalisations faites durant mes années de BTS</h2>
