--- a/realiser/Gestion_Assistance.html
+++ b/realiser/Gestion_Assistance.html
@@ -84,12 +84,18 @@
                             <br/>
 							<h4>Contexte</h4>
 							<p>
-								Sous la demande de la société MXM, j'ai dû m'occuper 
+								Sous la demande de la société MXM, Comme pour la gestion d'incident, j'ai dû m'occupé des demandes d'assistance des utilisateurs du système informatique. Afin d'obtenir un avertissement efficace, on réutilise la de gestion de Tickets (Redmine) précédement installé.
 							</p>
                             <br/>
                             <h4>La Réalisation d'une demande</h4>
                             <p>
-                                
+                                Pour chacune des demandes, un ticket doit être créé sur le gestionnaire de Redmine, avec l'attribution de l'équipe informatique ou à un technicien particulier.
+                                <br/>
+                                Chaque personne se retrouve avec sa propre liste de demandes.
+                                <br/><br/>
+                                En fonction de l'urgence des demandes soient on s'en occupes dans les jours qui viennent soit on définit lors des scrums, fait les lundi, ou on définit la personne la plus adéquoite pour la réalisé.
+                                <br/><br/>
+                                <p>Tout le long des tâche, une maintien de l'avancement doit être fait sur le ticket de la demande, jusqu'à sa fermeture.</p>
                             </p>
                         </span>
                     </div>
