--- a/realiser/Gestion_Assistance.html
+++ b/realiser/Gestion_Assistance.html
@@ -84,7 +84,7 @@
                             <br/>
 							<h4>Contexte</h4>
 							<p>
-								Sous la demande de la société MXM, Comme pour la gestion d'incident, j'ai dû m'occupé des demandes d'assistance des utilisateurs du système informatique. Afin d'obtenir un avertissement efficace, on réutilise la de gestion de Tickets (Redmine) précédement installé.
+								Sous la demande de la société MXM, comme pour la gestion d'incident, je me suis occupé des demandes d'assistances des utilisateurs du système informatique. Afin d'obtenir un avertissement efficace, on réutilise la gestion de Tickets (Redmine) précédemment installée.
 							</p>
                             <br/>
                             <h4>La Réalisation d'une demande</h4>
@@ -93,9 +93,9 @@
                                 <br/>
                                 Chaque personne se retrouve avec sa propre liste de demandes.
                                 <br/><br/>
-                                En fonction de l'urgence des demandes soient on s'en occupes dans les jours qui viennent soit on définit lors des scrums, fait les lundi, ou on définit la personne la plus adéquoite pour la réalisé.
+                                En fonction de l'urgence des demandes, soit on s'en occupe dans les jours qui viennent, soit on définit lors de scrums, faits tous les lundis, ou on définit la personne la plus adéquate pour la réaliser.
                                 <br/><br/>
-                                <p>Tout le long des tâche, une maintien de l'avancement doit être fait sur le ticket de la demande, jusqu'à sa fermeture.</p>
+                                <p>Tout le long des tâches, un maintien de l'avancement doit être fait sur le ticket de la demande, jusqu'à sa fermeture.</p>
                             </p>
                         </span>
                     </div>
